k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atiesh-codex-ingress
  labels:
    app.kubernetes.io/name: atiesh-codex-ingress
    app.kubernetes.io/part-of: atiesh-codex-app
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: '64m'
spec:
  tls:
    - hosts:
        - atieshcodex.local
        - atieshcodex.com
      secretName: atiesh-codex-tls-secret
  rules:
    - host: atieshcodex.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: atiesh-codex-server
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atiesh-codex-client
                port:
                  number: 80
